<resources>
    <string name="app_name">Order Now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_history">Lịch sử mua hàng</string>
    <string name="menu_product_favourite">Sản phẩm yêu thích</string>
    <string name="menu_evaluate">Đánh giá</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_logout">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_notification">Thông báo</string>
</resources>