<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_favorite_border_24"
            android:title="@string/menu_product_favourite" />
        <item
            android:id="@+id/nav_evaluate"
            android:icon="@drawable/baseline_star_purple500_24"
            android:title="@string/menu_evaluate" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_suggest_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>